---
config:
  layout: elk
  themeVariables:
    fontFamily: Arial
    fontSize: "24px"
  er:
    layoutDirection: LR
  look: neo
---
erDiagram
    direction TB
    STATES {
        INT state_id PK ""  
        VARCHAR name  ""  
        CHAR2 code  ""  
        TEXT geom_boundary  ""  
        TEXT geom_center  ""  
        INT map_zoom_level  ""  
        VARCHAR registration_method  ""  
        BOOLEAN same_day_registration  ""  
        SMALLINT felony_disenfranchisement  ""  
        INT population_total  ""  
        INT citizens_of_voting_age_population  ""  
        INT house_seats_rep  ""  
        INT house_seats_dem  ""  
        VARCHAR redistricting_control  ""  
        CHAR1 dominant_party  ""  
    }
    REGION_BOUNDARY {
        VARCHAR10 region_id PK ""  
        INT state_id FK ""  
        VARCHAR100 name  ""  
        TEXT geom_boundary  ""  
        TEXT geom_center  ""  
    }
    GEOUNIT {
        VARCHAR10 geounit_id PK ""  
        VARCHAR100 geounit_name  ""  
        VARCHAR30 geounit_type  ""  
        VARCHAR10 fips_code  ""  
        INT state_id FK ""  
        SMALLINT year  ""  
    }
    EAVS_GEOUNIT {
        SERIAL region_id PK ""  
        INT state_id FK ""  
        VARCHAR100 name  ""  
        VARCHAR100 eavs_unit_name  ""  
        VARCHAR15 eavs_unit_code  ""  
        VARCHAR20 unit_type  ""  
        BOOLEAN uses_fips  ""  
        TEXT geom_boundary  ""  
        TEXT centroid  ""  
        VARCHAR10 region_type  ""  
    }
    CENSUS_BLOCK {
        CHAR15 block_id PK ""  
        INT state_id FK ""  
        TEXT geom_center  ""  
    }
    VOTER_REGISTRATION {
        SERIAL voter_id PK ""  
        INT state_id FK ""  
        VARCHAR10 region_id  ""  
        VARCHAR50 first_name  ""  
        VARCHAR50 last_name  ""  
        VARCHAR50 middle_name  ""  
        VARCHAR20 party_affiliation  ""  
        VARCHAR20 status  ""  
        VARCHAR50 city  ""  
        VARCHAR10 zip_code  ""  
        VARCHAR120 residential_address  ""  
        DATE registration_date  ""  
        CHAR15 census_block_id FK ""  
    }
    ELECTION_RESULTS {
        VARCHAR10 region_id PK ""  
        INT state_id FK ""  
        INT year PK ""  
        INT rep_votes  ""  
        INT dem_votes  ""  
        INT other_votes  ""  
        INT total_votes  ""  
    }
    CVAP_DATA {
        VARCHAR10 region_id PK ""  
        INT state_id FK ""  
        SMALLINT estimate_year PK ""  
        INT cvap_total  ""  
        INT cvap_white  ""  
        INT cvap_black  ""  
        INT cvap_hispanic  ""  
        INT cvap_asian  ""  
        INT cvap_other  ""  
    }
    EAVS_DATA {
        VARCHAR10 region_id PK ""  
        INT state_id FK ""  
        INT year PK ""  
        INT active_registered  ""  
        INT inactive_registered  ""  
        INT total_registered  ""  
        BOOLEAN reg_missing_data  ""  
        INT total_removed  ""  
        INT removed_moved  ""  
        INT removed_felony  ""  
        INT removed_deceased  ""  
        INT removed_failed_confirm  ""  
        INT removed_incompetent  ""  
        INT removed_requested  ""  
        INT removed_duplicate  ""  
        INT removed_other  ""  
        BOOLEAN del_missing_data  ""  
        INT total_ballots_cast  ""  
        INT ballots_by_mail  ""  
        INT ballots_in_person_early  ""  
        INT ballots_in_person_eday  ""  
        INT ballots_dropbox  ""  
        INT early_voting_total  ""  
        BOOLEAN early_missing_data  ""  
        INT prov_cast  ""  
        INT prov_reason_not_in_roll  ""  
        INT prov_reason_no_id  ""  
        INT prov_reason_not_eligibe_official  ""  
        INT prov_reason_challenged  ""  
        INT prov_reason_wrong_precinct  ""  
        INT prov_reason_name_address  ""  
        INT prov_reason_mail_ballot_unsurrendered  ""  
        INT prov_reason_hours_extended  ""  
        INT prov_reason_same_day_reg  ""  
        INT prov_other  ""  
        INT mail_reject_total  ""  
        INT mail_reject_late  ""  
        INT mail_reject_no_sig  ""  
        INT mail_reject_no_witness_sig  ""  
        INT mail_reject_sig_mismatch  ""  
        INT mail_reject_unofficial_env  ""  
        INT mail_reject_ballot_missing  ""  
        INT mail_reject_no_secrecy_env  ""  
        INT mail_reject_multiple_in_env  ""  
        INT mail_reject_unsealed_env  ""  
        INT mail_reject_no_postmark  ""  
        INT mail_reject_no_address  ""  
        INT mail_reject_voter_deceased  ""  
        INT mail_reject_duplicate_vote  ""  
        INT mail_reject_missing_docs  ""  
        INT mail_reject_not_eligible  ""  
        INT mail_reject_no_application  ""  
        INT mail_reject_other  ""  
        BOOLEAN mail_missing_data  ""  
        NUMERIC missing_data_score  ""  
    }
    DEVICE_MODEL {
        INT device_model_id PK
        
        VARCHAR manufacturer
        VARCHAR equipment_type
        VARCHAR model_name

        DATE first_manufactured
        DATE last_manufactured

        VARCHAR os
        VARCHAR firmware_version

        NUMERIC battery_life
        INT scanning_rate
        INT paper_capacity

        BOOLEAN vvpatt
        VARCHAR certification_level

        TEXT security_risks
        TEXT notes_misc

        BOOLEAN discontinued
        TEXT short_description

        NUMERIC error_rate
        NUMERIC reliability
        NUMERIC quality_score 
    }
    GEOUNIT_DEVICE {
        BIGSERIAL geounit_device_id PK ""  
        VARCHAR10 geounit_id FK ""  
        BIGINT device_model_id FK ""  
        DATE start_date  ""  
        DATE end_date  ""  
        INT quantity  ""  
        TEXT notes  ""  
    }
    EQUIPMENT_USAGE {
        SERIAL usage_id PK ""  
        INT state_id FK ""  
        VARCHAR10 region_id  ""  
        INT year  ""  
        INT device_model_id FK ""  
        INT quantity  ""  
        DECIMAL avg_age  ""  
    }
    STATES||--o{REGION_BOUNDARY:"HAS"
    STATES||--o{GEOUNIT:"HAS"
    STATES||--o{EAVS_GEOUNIT:"HAS"
    STATES||--o{CENSUS_BLOCK:"HAS"
    REGION_BOUNDARY||--||GEOUNIT:"MAPS TO"
    CENSUS_BLOCK||--o{VOTER_REGISTRATION:"CONTAINS"
    REGION_BOUNDARY||--o{ELECTION_RESULTS:"BY_REGION"
    REGION_BOUNDARY||--o{CVAP_DATA:"BY_REGION"
    REGION_BOUNDARY||--o{EAVS_DATA:"BY_REGION"
    STATES||--o{VOTER_REGISTRATION:"HAS"
    STATES||--o{ELECTION_RESULTS:"HAS"
    STATES||--o{CVAP_DATA:"HAS"
    STATES||--o{EAVS_DATA:"HAS"
    DEVICE_MODEL||--o{GEOUNIT_DEVICE:"ASSIGNED_TO"
    GEOUNIT||--o{GEOUNIT_DEVICE:"HAS"
    DEVICE_MODEL||--o{EQUIPMENT_USAGE:"USED_IN"
    STATES||--o{EQUIPMENT_USAGE:"TRACKS_USAGE"
